--- a/src/dotinvietnam/index.html
+++ b/src/dotinvietnam/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="DOTinVietnam is a meetup and workshop organized by the leading projects in Polkadot and Kusama ecosystem. Sponsored by the Polkadot Event Bounty, this event aims to raise awareness of Polkadot, Kusama and Substrate in Vietnam and onboard the Vietnamese developer community to Polkadot ecosystem.">
 
 	<meta property="og:site_name" content="DOTinVietnam">
-	<meta property="og:url" content="https://project.thememove.com/dotinvietnam/">
+	<meta property="og:url" content="https://dotinvietnam.com/">
 	<meta property="og:title" content="DOTinVietnam">
 	<meta property="og:type" content="website">
 	<meta property="og:description" content="DOTinVietnam is a meetup and workshop organized by the leading projects in Polkadot and Kusama ecosystem. Sponsored by the Polkadot Event Bounty, this event aims to raise awareness of Polkadot, Kusama and Substrate in Vietnam and onboard the Vietnamese developer community to Polkadot ecosystem.">
@@ -17,8 +17,8 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="DOTinVietnam">
 	<meta name="twitter:description" content="DOTinVietnam is a meetup and workshop organized by the leading projects in Polkadot and Kusama ecosystem. Sponsored by the Polkadot Event Bounty, this event aims to raise awareness of Polkadot, Kusama and Substrate in Vietnam and onboard the Vietnamese developer community to Polkadot ecosystem.">
-	<meta property="og:image" content="https://project.thememove.com/dotinvietnam/assets/images/preview.jpg"/>
-	<meta property="og:image:secure_url" content="https://project.thememove.com/dotinvietnam/assets/images/preview.jpg"/>
+	<meta property="og:image" content="https://dotinvietnam.com/assets/images/preview.jpg"/>
+	<meta property="og:image:secure_url" content="https://dotinvietnam.com/assets/images/preview.jpg"/>
 	<meta property="og:image:alt" content="DOTinVietnam"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="630"/>
@@ -338,7 +338,6 @@
 				     data-items-desktop="1"
 				     data-items-group-desktop="1"
 				     data-gutter-desktop="30"
-				     data-effect="fade"
 				     data-nav="1"
 				     data-custom-nav="project-slider-custom-nav"
 				>
