Update hero section

--- a/src/dotinvietnam/index.html
+++ b/src/dotinvietnam/index.html
@@ -109,11 +109,6 @@
 								<span class="nav-text">Agenda</span>
 							</a>
 						</li>
-						<li class="nav-item active-item">
-							<a class="nav-link scroll-to" href="#see-you-there">
-								<span class="nav-text">Documents</span>
-							</a>
-						</li>
 					</ul>
 				</nav>
 				<!-- .primary-menu -->
@@ -171,11 +166,6 @@
 								<span class="nav-text">Agenda</span>
 							</a>
 						</li>
-						<li class="nav-item active-item">
-							<a class="nav-link scroll-to" href="#see-you-there">
-								<span class="nav-text">Documents</span>
-							</a>
-						</li>
 					</ul>
 					<!-- .mobile-menu -->
 
@@ -200,14 +190,11 @@
 			</div>
 			<div class="section-content">
 				<div class="container-fluid">
+					<h2 class="hero-sub-title">Meet us</h2>
 					<h1 class="hero-title">@
 						<mark>DOT</mark>
 						inVietnam
 					</h1>
-					<h2 class="section-title hero-sub-title">
-						<mark>MEET</mark>
-						US
-					</h2>
 					<a href="#" class="button">Register now</a>
 					<ul class="hero-event-info">
 						<li>
@@ -694,7 +681,7 @@
 			</div>
 		</div>
 	</div>
-	<footer id="see-you-there" class="section section-footer site-footer">
+	<footer class="section section-footer site-footer">
 		<div class="section-shape shape-grid">
 			<img src="./assets/images/footer-shape.png" alt="Shape" width="875" height="875" class="shape-rotate-zoom">
 		</div>
