--- a/src/dotinvietnam/index.html
+++ b/src/dotinvietnam/index.html
@@ -191,10 +191,9 @@
 			<div class="section-content">
 				<div class="container-fluid">
 					<h2 class="hero-sub-title">Meet us</h2>
-					<h1 class="hero-title">@
-						<mark>DOT</mark>
-						inVietnam
-					</h1>
+					<!-- @formatter:off -->
+					<h1 class="hero-title">@<mark>DOT</mark>inVietnam</h1>
+					<!-- @formatter:off -->
 					<a href="#" class="button">Register now</a>
 					<ul class="hero-event-info">
 						<li>
@@ -340,7 +339,7 @@
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
-												<a href="https://www.youtube.com/watch?v=KXk_7t0nCKM" class="video-link">
+												<a href="https://www.youtube.com/watch?v=Avjw3IBPEMQ" class="video-link">
 													<img src="./assets/images/poster-placeholder.jpg" alt="SubWallet project" width="577" height="356" loading="lazy"/>
 													<div class="video-play-btn">
 														<span class="video-play-icon"></span>
@@ -359,7 +358,7 @@
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
-												<a href="https://www.youtube.com/watch?v=KXk_7t0nCKM" class="video-link">
+												<a href="https://www.youtube.com/watch?v=jN7jLaL_S3c" class="video-link">
 													<img src="./assets/images/poster-placeholder.jpg" alt="SubWallet project" width="577" height="356" loading="lazy"/>
 													<div class="video-play-btn">
 														<span class="video-play-icon"></span>
@@ -705,7 +704,7 @@
 		</div>
 	</footer>
 </div>
-
+<div id="custom-cursor" class="custom-cursor"></div>
 <script src="./assets/libs/jquery/jquery-3.6.0.min.js"></script>
 <script src="./assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="./assets/libs/elementor-waypoints/jquery.waypoints.min.js"></script>
