--- a/src/dotinvietnam/index.html
+++ b/src/dotinvietnam/index.html
@@ -335,9 +335,9 @@
 										<div class="col-md-5 col-lg-4 col-project-info">
 											<h3 class="project-name">SubWallet project</h3>
 											<div class="project-excerpt-wrap">
-												<p class="project-excerpt">Since its creation it has become a place of cultural exchange in Paris but also an interlocutor in the field of mathematics and research.</p>
+												<p class="project-excerpt">Users in Polkadot & Kusama ecosystem can use SubWallet to track, send, receive, monitor multi-chain assets balance with ease!</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://subwallet.app/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -358,7 +358,7 @@
 											<div class="project-excerpt-wrap">
 												<p class="project-excerpt">Parity Technologies is the software development company behind some of the world’s most trusted Web3 technology. It was founded in 2015 and succeeded in building some of the fastest and most secure open-source software for the decentralized web, including clients for Ethereum, Bitcoin, and Zcash. Parity has now moved on from these to address the previous limitations of blockchain technology, creating Substrate and developing the ground-breaking Kusama and Polkadot networks.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://www.parity.io/" target="_blank" class="button-bottom-line btn-view-project" =>View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -380,7 +380,7 @@
 											<p class="project-excerpt">Polkadot is a next-generation blockchain protocol connecting multiple specialized blockchains into one unified network. Designed as part of a broad vision for a web that returns control to individuals over internet monopolies, Polkadot builds on the revolutionary promise of previous blockchain networks while offering several fundamental advantages.
 												What are those advantages? Polkadot enables blockchain networks to: scale, specialize, work together, self-govern, upgrade easily and more.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://polkadot.network/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -401,7 +401,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Litentry is a Decentralized Identity Aggregator that enables linking user identities across multiple networks. Featuring a DID indexing protocol, and a Substrate-built distributed DID validation blockchain, Litentry provides a decentralized, interoperable identity aggregation service that mitigates the difficulty of resolving agnostic DID mechanisms. Litentry provides a secure vehicle through which users manage their identities and dApps obtain real-time DID data of an identity owner across different blockchains.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://litentry.com/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -422,7 +422,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Moonbeam is an Ethereum-compatible smart contract platform on the Polkadot network that makes it easy to build natively interoperable applications. This Ethereum compatibility allows developers to deploy existing Solidity smart contracts and DApp frontends to Moonbeam with minimal changes. Following Moonriver’s tremendous success on Kusama as the most active deployment destination for over 80 DApps, Moonbeam benefits from the shared security of the Polkadot relay chain and integrations with other chains that are connected to Polkadot.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://moonbeam.network/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -443,7 +443,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Astar Network – the Innovation Hub on Polkadot. Astar Network supports the building of dApps with EVM and WASM smart contracts and offers developers true interoperability, with cross-consensus messaging. We are made by developers and for developers: Astar’s unique Build2Earn model empowers software engineers to get paid through a dApp staking mechanism for the code they write. Astar’s vibrant ecosystem has become Polkadot’s leading Parachain globally, supported by all major exchanges and tier 1 VCs. Astar offers the flexibility of all Ethereum and WASM toolings for developers to start building their dApps. And to accelerate growth on Polkadot and Kusama Networks, Astar Space Labs offers an Incubation Hub for top TVL dApps.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://astar.network/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -464,7 +464,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Bifrost is a web3 derivatives protocol that provides decentralized cross-chain liquidity for staked assets. By leveraging the cross-consensus message (XCM) it can supply cross-chain liquid staking services for multiple chains. Bifrost’s mission is to provide standardized cross-chain interest-bearing derivatives for Polkadot relay chains, parachains, and heterogeneous chains bridged with Polkadot.The protocol lowers user’s staking threshold, increases the multi-chain staking ratio, and improves the application of the ecosystem interest base by creating a three-way positive cycle for the StakeFi ecosystem.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://bifrost.finance/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -485,7 +485,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Digital Finance Group (DFG) is a global investment firm with more than $1B in AUM focused on empowering blockchain and Web3 companies. Since 2015, DFG has been committed to the long-term potential of blockchain technology and manages investments across the crypto ecosystem. A wide range of sectors includes Web3.0, CeFi, DeFi, NFTs, and Polkadot ecosystem. Investments include Circle, Coinlist, FV Bank, Solona, Acala, Astar, Bit.Country and over 120 more.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://www.dfg.group/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -506,7 +506,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Jsquare is a research and tech-driven investment firm focused on facilitating blockchain mass adoption, and empowering future Alpha in Web3. Currently we are self-funded with AUM over $150M. Our portfolio includes CeFi (CoinList, 3iQ, Republic, FV Bank), GameFi/NFT (Efinity, Big Time, Thetan Arena, Apeiron), Infrastructure/Tooling (Pocket, Render, ChainSafe, GSN) , among others.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://www.jsquare.co/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -527,7 +527,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">MoonFit is a Web3 & NFT Lifestyle App that promotes active living by rewarding users anytime they burn calories through physical activities. To keep it short, we are working to solve the problem of Move2Earn model and elevate the Web2 Fitness Apps by bringing Web3 experiences for users.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://moonfit.xyz/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -548,7 +548,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Web3Go is an open data platform that focuses on the formatting, visualization, sharing, and collaborative analysis of the on-chain data generated in the Polkadot and BNBChain a\ecosystem.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://web3go.xyz/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -569,7 +569,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Phala Network tackles the issue of trust in the computation cloud. By organizing a decentralized network of computation nodes around the world, it offers high-performance services without relying on any cloud vendor. Phala workers run the programs in Secure Enclaves, a privacy technology already embedded into modern processors, enabling versatile and confidential execution. Together, this creates the infrastructure for a powerful, secure, and scalable trustless computing cloud.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://www.phala.network/en/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -590,7 +590,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">CESS provides secure, fast and price-competitive decentralized storage for the next generation of Web3 services.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://cess.cloud/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -611,7 +611,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">Bit.Country is a decentralized application that gives users the tools to create a Metaverse in 12 seconds. Any person, project, brand, business, influencer, or community can easily use Bit.Country to experience or build interactive immersive digital worlds where users are consistently rewarded with tokens or NFTs in marketing campaigns. Digital worlds are built on virtual land that can be subdivided to co-build with a community by placing voxels, 3D assets/NFTs and props. Bit.Country is built on substrate based Metaverse.Network blockchain which is a parachain to Kusama (Polkadot ecosystem). The universal network currency is $NEER while the in-game currency is $BIT.</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://bit.country/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
@@ -632,7 +632,7 @@
 											<div class="project-excerpt-wrap">
 											<p class="project-excerpt">The Unique Network blockchain empowers you with the most sustainable NFTs in the entire industry, complete with unlimited advanced features built to be mass-adoption-ready!</p>
 											</div>
-											<a href="#" class="button-bottom-line btn-view-project">View project</a>
+											<a href="https://unique.network/" target="_blank" class="button-bottom-line btn-view-project">View project</a>
 										</div>
 										<div class="col-md-7 col-lg-7 col-lg-push-1 col-project-feature">
 											<div class="video-popup">
